--- a/OldInternalLogic/OldInternalLogic.csproj
+++ b/OldInternalLogic/OldInternalLogic.csproj
@@ -116,6 +116,9 @@
     <Content Include="help.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="glyco.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="m.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
