--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ install:
 - nuget install NUnit.Console -OutputDirectory testrunner
 script:
 - echo $TRAVIS_TAG 
-- cat MetaMorpheusCommandLine/Properties/AssemblyInfo.cs
-- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' MetaMorpheusCommandLine/Properties/AssemblyInfo.cs ; fi
-- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' InternalLogic/Properties/AssemblyInfo.cs ; fi
-- cat MetaMorpheusCommandLine/Properties/AssemblyInfo.cs
+- cat CMD/Properties/AssemblyInfo.cs
+- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' CMD/Properties/AssemblyInfo.cs ; fi
+- if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' EngineLayer/Properties/AssemblyInfo.cs ; fi
+- cat CMD/Properties/AssemblyInfo.cs
 - xbuild /p:Configuration=TestAndReleaseTravis MetaMorpheus.sln
 - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
-- tar -zcvf MonoCommandLine.tar.gz -C MetaMorpheusCommandLine/bin/Release .
+- tar -zcvf MonoCommandLine.tar.gz -C CMD/bin/Release .
 deploy:
   provider: releases
   api_key:
