--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -102,19 +102,19 @@
     <Compile Include="ClassicSearch\ClassicSearchEngine.cs" />
     <Compile Include="ClassicSearch\ClassicSearchResults.cs" />
     <Compile Include="ClassicSearch\PsmClassic.cs" />
-    <Compile Include="CleavageSpecificity.cs" />
-    <Compile Include="CompactPeptide.cs" />
-    <Compile Include="InitiatorMethionineBehavior.cs" />
-    <Compile Include="ModificationType.cs" />
-    <Compile Include="MetaMorpheusModification.cs" />
-    <Compile Include="OldLogicTerminus.cs" />
-    <Compile Include="Peptide.cs" />
-    <Compile Include="PeptideWithPossibleModifications.cs" />
-    <Compile Include="PeptideWithSetModifications.cs" />
-    <Compile Include="ProductType.cs" />
-    <Compile Include="Protease.cs" />
-    <Compile Include="ProteaseDictionary.cs" />
-    <Compile Include="Protein.cs" />
+    <Compile Include="Proteomics\CleavageSpecificity.cs" />
+    <Compile Include="Proteomics\CompactPeptide.cs" />
+    <Compile Include="Proteomics\InitiatorMethionineBehavior.cs" />
+    <Compile Include="Proteomics\ModificationType.cs" />
+    <Compile Include="Proteomics\MetaMorpheusModification.cs" />
+    <Compile Include="Proteomics\TerminusType.cs" />
+    <Compile Include="Proteomics\Peptide.cs" />
+    <Compile Include="Proteomics\PeptideWithPossibleModifications.cs" />
+    <Compile Include="Proteomics\PeptideWithSetModifications.cs" />
+    <Compile Include="Proteomics\ProductType.cs" />
+    <Compile Include="Proteomics\Protease.cs" />
+    <Compile Include="Proteomics\ProteaseDictionary.cs" />
+    <Compile Include="Proteomics\Protein.cs" />
     <Compile Include="SearchModes\DotSearchMode.cs" />
     <Compile Include="Gptmd\GptmdEngine.cs" />
     <Compile Include="Gptmd\GptmdResults.cs" />
