--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <Compile Include="AnalysisEngineTest.cs" />
     <Compile Include="ExclusionsTest.cs" />
+    <Compile Include="LocalizationTest.cs" />
     <Compile Include="MyPeptideTest.cs" />
     <Compile Include="MyTaskTest.cs" />
     <Compile Include="RobTest.cs" />
