--- a/TaskLayer/TaskLayer.csproj
+++ b/TaskLayer/TaskLayer.csproj
@@ -99,7 +99,7 @@
     <Compile Include="ModList.cs" />
     <Compile Include="SearchTask\MySearchTaskResults.cs" />
     <Compile Include="SearchTask\SearchTask.cs" />
-    <Compile Include="Parent\MyTaskEngine.cs" />
+    <Compile Include="Parent\MetaMorpheusTask.cs" />
     <Compile Include="Parent\MyTaskResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SonarQubeExclude>true</SonarQubeExclude>
